# retis

./: .cirrus.yml  .codecov.yml  .containerignore  .gitattributes  .gitignore  .mailmap  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  RELEASE.md  Vagrantfile  build.rs  demo.py  ebpf.mk  foo.py  mkdocs.yml
retis/: Cargo.toml  build.rs
retis-events/: .gitignore  Cargo.toml  PYTHON_LIB_README.md  pyproject.toml  tox.ini
retis-events/pytests/: test_event.py  test_reader.py
retis-events/src/: backward_compat.rs  common.rs  ct.rs  dev.rs  display.rs  events.rs  file.rs  helpers.rs  kernel.rs  lib.rs  net.rs  nft.rs  ns.rs  ovs.rs  packet.rs  python.rs  python_embed.rs  raw_packet.rs  sk_rst.rs  skb.rs  skb_drop.rs  skb_tracking.rs  sock.rs  time.rs  user.rs
retis-events/src/compat/: compat.rs  json.rs  mod.rs
retis-events/src/file/: file.rs  mod.rs  rotate.rs
retis-events/src/helpers/: file.rs  file_rotate.rs  mod.rs  net.rs  time.rs  types.rs
retis-events/src/python/: mod.rs  python.rs  shell.rs
retis-events/test_data/: test_events.json  test_events_sorted.json
retis/profiles/: drop.yaml  generic.yaml  ifdump.yaml  pcap.yaml
retis/src/: main.rs
retis/src/benchmark/: cli.rs  events_output.rs  events_parsing.rs  helpers.rs  mod.rs
retis/src/bindings/: common_defs_uapi.rs  common_uapi.rs  ct_hook_uapi.rs  ct_uapi.rs  dev_common_uapi.rs  dev_hook_uapi.rs  events_uapi.rs  if_vlan_uapi.rs  kernel_enqueue_hook_uapi.rs  kernel_enqueue_uapi.rs  kernel_exec_tp_hook_uapi.rs  kernel_exec_tp_uapi.rs  kernel_flow_tbl_lookup_ret_hook_uapi.rs  kernel_flow_tbl_lookup_ret_uapi.rs  kernel_upcall_ret_hook_uapi.rs  kernel_upcall_ret_uapi.rs  kernel_upcall_tp_hook_uapi.rs  kernel_upcall_tp_uapi.rs  meta_filter_uapi.rs  mod.rs  netns_hook_uapi.rs  nft_hook_uapi.rs  nft_uapi.rs  ovs_common_uapi.rs  ovs_operation_uapi.rs  packet_filter_uapi.rs  skb_drop_hook_uapi.rs  skb_hook_uapi.rs  skb_tracking_uapi.rs  sock_hook_uapi.rs  tracking_hook_uapi.rs  user_recv_upcall_hook_uapi.rs  user_recv_upcall_uapi.rs
retis/src/cli/: cli.rs  dynamic.rs  mod.rs
retis/src/collect/: cli.rs  collect.rs  collector.rs  mod.rs
retis/src/collect/collector/: collector.rs  mod.rs  module.rs
retis/src/collect/collector/ct/: bpf.rs  ct.rs  mod.rs
retis/src/collect/collector/ct/bpf/: ct.bpf.c  ct_hook.bpf.c
retis/src/collect/collector/dev/: dev.rs  mod.rs
retis/src/collect/collector/dev/bpf/: core_stat_hook.bpf.c  dev_hook.bpf.c
retis/src/collect/collector/nft/: bpf.rs  mod.rs  nft.rs
retis/src/collect/collector/nft/bpf/: nft.bpf.c  nft_hook.bpf.c
retis/src/collect/collector/ns/: mod.rs  ns.rs
retis/src/collect/collector/ns/bpf/: netns_hook.bpf.c
retis/src/collect/collector/ovs/: bpf.rs  flow_info.rs  mod.rs  ovs.rs
retis/src/collect/collector/ovs/bpf/: kernel_enqueue.bpf.c  kernel_enqueue_hook.bpf.c  kernel_exec_actions.bpf.c  kernel_exec_actions_hook.bpf.c  kernel_exec_actions_ret.bpf.c  kernel_exec_actions_ret_hook.bpf.c  kernel_exec_tp.bpf.c  kernel_exec_tp_hook.bpf.c  kernel_flow_tbl_lookup.bpf.c  kernel_flow_tbl_lookup_ctx.bpf.c  kernel_flow_tbl_lookup_ctx_hook.bpf.c  kernel_flow_tbl_lookup_hook.bpf.c  kernel_flow_tbl_lookup_ret.bpf.c  kernel_flow_tbl_lookup_ret_hook.bpf.c  kernel_process_packet.bpf.c  kernel_process_packet_hook.bpf.c  kernel_upcall_ret_hook.bpf.c  kernel_upcall_tp.bpf.c  kernel_upcall_tp_hook.bpf.c
retis/src/collect/collector/skb/: bpf.rs  mod.rs  skb.rs
retis/src/collect/collector/skb/bpf/: skb_hook.bpf.c
retis/src/collect/collector/skb_drop/: bpf.rs  mod.rs  skb_drop.rs
retis/src/collect/collector/skb_tracking/: mod.rs  skb_tracking.rs
retis/src/collect/collector/sock/: mod.rs  sock.rs
retis/src/core/: mod.rs  workaround.rs
retis/src/core/bpf_sys/: bpf_sys.rs  mod.rs
retis/src/core/bpf_sys/include/: bpf-sys.h
retis/src/core/events/: bpf.rs  factory.rs  mod.rs
retis/src/core/filters/: filters.rs  mod.rs
retis/src/core/filters/meta/: filter.rs  meta.pest
retis/src/core/filters/packets/: bpf_common.rs  cbpf.rs  ebpf.rs  ebpfinsn.rs  filter.rs
retis/src/core/inspect/: btf.rs  check.rs  inspect.rs  kernel.rs  kernel_version.rs  mod.rs
retis/src/core/kernel/: symbol.rs
retis/src/core/probe/: builder.rs  common.rs  manager.rs  probe.rs
retis/src/core/probe/kernel/: common_types.rs  common_uapi.rs  config.rs  fentry.rs  inspect.rs  kernel.rs  kprobe.rs  kretprobe.rs  mod.rs  probe_stack.rs  raw_tracepoint.rs  utils.rs
retis/src/core/probe/user/: mod.rs  usdt.rs  user.rs
retis/src/core/probe/user/bpf/: usdt.bpf.c
retis/src/core/tracking/: gc.rs  mod.rs  skb_tracking.rs  stack_tracking.rs
retis/src/core/user/: mod.rs  proc.rs
retis/src/generate/: completion.rs  mod.rs
retis/src/helpers/: bimap.rs  file_rotate.rs  logger.rs  mod.rs  net.rs  pager.rs  signals.rs  time.rs
retis/src/inspect/: inspect.rs
retis/src/module/: module.rs
retis/src/module/ct/: bpf.rs  ct.rs  mod.rs
retis/src/module/ct/bpf/: ct.bpf.c
retis/src/module/nft/: bpf.rs  nft.rs
retis/src/module/nft/bpf/: nft.bpf.c
retis/src/module/ovs/: bpf.rs  mod.rs  ovs.rs
retis/src/module/ovs/bpf/: kernel_exec_tp.bpf.c  kernel_flow_tbl_lookup_ret.bpf.c  kernel_process_packet.bpf.c  kernel_upcall_ret.bpf.c  kernel_upcall_tp.bpf.c  user_recv_upcall.bpf.c
retis/src/module/skb/: bpf.rs  mod.rs  skb.rs
retis/src/module/skb/bpf/: skb_hook.bpf.c
retis/src/module/skb_drop/: bpf.rs  mod.rs  skb_drop.rs
retis/src/module/skb_drop/bpf/: skb_drop_hook.bpf.c
retis/src/module/skb_tracking/: skb_tracking.rs
retis/src/module/skb_tracking/bpf/: tracking_hook.bpf.c
retis/src/process/: display.rs  series.rs  tracking.rs
retis/src/process/cli/: capinfo.rs  mod.rs  pcap.rs  print.rs  python.rs  schema.rs  sort.rs  stats.rs
retis/src/profiles/: cli.rs  mod.rs  profiles.rs  version.rs
retis/test_data/: config-6.3.0-0.rc7.56.fc39.x86_64  skb_gen.rs  test_events_bench.json  test_events_bench_no_probes.json  test_events_packets.json  test_events_packets.pcap  test_events_packets_invalid_ct.json
retis/test_data/btf/: openvswitch
(+344 files in other folders)
