[package]
name = "retis"
version = "0.1.0"
edition = "2021"

[features]
test_bindgen_layout = []
test_cap_bpf = []
debug = ["dep:rbpf"]

[dependencies]
anyhow = "1.0"
bimap = "0.6"
btf-rs = "0.1"
byteorder = "1.4"
clap = { version = "4.0", features = ["derive", "string"] }
elf = "0.7"
libbpf-rs = "0.20"
libbpf-sys = "1.0"
libc = "0.2"
log = "0.4"
memoffset = "0.7"
nix = "0.25"
once_cell = "1.15"
pcap = "1.0"
plain = "0.2"
rbpf = {git = "https://github.com/qmonnet/rbpf", optional = true}
retis-derive = {path = "./retis-derive"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "2.3"
signal-hook = "0.3"
simplelog = "0.12"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.63"
libbpf-cargo = "0.20"
libbpf-sys = "1.0"
memmap2 = "0.5"

[dev-dependencies]
probe = "0.3.0"
