[package]
name = "retis"
version = "1.1.0"
license = "GPL-2.0-only"
description = "Tracing packets in the Linux networking stack, using eBPF and interfacing with control and data paths such as OvS or Netfilter"
repository = "https://github.com/retis-org/retis"
homepage = "https://github.com/retis-org/retis"
readme = "README.md"
keywords = ["tracing", "networking", "linux", "bpf", "ebpf"]
# Do not publish the tests and their data to save some space. Cargo files and
# readme are always included.
include = ["src/", "build.rs", "retis-derive/", "profiles/", "tools/", "LICENSE"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
test_bindgen_layout = []
test_cap_bpf = []
benchmark = []
debug = ["dep:rbpf"]

[dependencies]
anyhow = "1.0"
bimap = "0.6"
btf-rs = "0.1"
byteorder = "1.4"
caps = "0.5"
clap = { version = "4.0", features = ["derive", "string"] }
elf = "0.7"
flate2 = "1.0"
libbpf-rs = "0.21"
libbpf-sys = "1.0"
libc = "0.2"
log = "0.4"
memoffset = "0.9"
nix = "0.26"
once_cell = "1.15"
path-clean = "1.0"
pcap = "1.0"
plain = "0.2"
rbpf = {version = "0.2", optional = true}
regex = "1.7"
retis-derive = {version = "1.1", path = "./retis-derive"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0"
serde_yaml = "0.9"
signal-hook = "0.3"
simplelog = "0.12"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.66"
libbpf-cargo = "0.21"
libbpf-sys = "1.0"
memmap2 = "0.7"

[dev-dependencies]
probe = "0.5"
