[package]
name = "retis"
version = "1.3.1"
license = "GPL-2.0-only"
description = "Tracing packets in the Linux networking stack, using eBPF and interfacing with control and data paths such as OvS or Netfilter"
repository = "https://github.com/retis-org/retis"
homepage = "https://github.com/retis-org/retis"
readme = "README.md"
keywords = ["tracing", "networking", "linux", "bpf", "ebpf"]
# Do not publish the tests and their data to save some space. Cargo files and
# readme are always included.
include = ["src/", "build.rs", "retis-derive/", "profiles/", "tools/", "LICENSE"]
edition = "2021"

[package.metadata.misc]
release_name = "bredele"

[badges]
maintenance = { status = "actively-developed" }

[features]
test_bindgen_layout = []
test_cap_bpf = []
benchmark = []
debug = ["dep:rbpf"]

[dependencies]
anyhow = "1.0"
bimap = "0.6"
btf-rs = "1.0"
byteorder = "1.5"
caps = "0.5"
clap = { version = "4.0", features = ["derive", "string"] }
clap_complete = "4.4"
elf = "0.7"
flate2 = "1.0"
libbpf-rs = "0.22"
libbpf-sys = "1.0"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
memoffset = "0.9"
nix = { version = "0.27", features = ["feature", "time", "user"] }
once_cell = "1.15"
pager = "0.16"
path-clean = "1.0"
pcap = "1.0"
pcap-file = "2.0"
plain = "0.2"
pyo3 = { git = "https://github.com/PyO3/pyo3.git", rev = "1d224610c30b", features = ["auto-initialize", "multiple-pymethods"] }
rbpf = {version = "0.2", optional = true}
regex = "1.7"
retis-derive = {version = "1.3", path = "./retis-derive"}
rustyline = "12.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0"
serde_yaml = "0.9"
signal-hook = "0.3"
termcolor = "1.3"
time = { version = "0.3", features = ["formatting", "macros"] }
thiserror = "1.0"

[build-dependencies]
bindgen = "0.69"
libbpf-cargo = "0.22"
libbpf-sys = "1.0"
memmap2 = "0.9"

[dev-dependencies]
probe = "0.5"
serial_test = "2.0"
test-case = "3.2"
