[package]
name = "retis-events"
version = "1.4.0"
edition = "2021"

[features]
test-events = []

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
once_cell = "1.15"
retis-derive = {version = "1.4", path = "../retis-derive"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0"
