[package]
name = "retis-events"
version = "1.5.0"
edition = "2021"

[features]
python = ["retis-derive/python"]
python-embed = ["python", "pyo3/auto-initialize"]
python-lib = ["python", "pyo3/extension-module", "pyo3/abi3-py38"]
test-events = []

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
once_cell = "1.15"
retis-derive = {version = "1.4", path = "../retis-derive"}
pyo3 = {version = "0.23", features = ["multiple-pymethods"], optional = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0"
