[package]
name = "retis-events"
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
python = ["retis-derive/python"]
python-embed = ["python", "pyo3/auto-initialize"]
python-lib = ["python", "pyo3/extension-module", "pyo3/abi3-py38"]
test-events = []

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
once_cell = "1.15"
retis-derive = {version = "1.4", path = "../retis-derive"}
retis-pnet = {version = "1.5", path = "../retis-pnet"}
pyo3 = {version = "0.25", features = ["multiple-pymethods"], optional = true}
semver = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0"
thiserror = "2.0"
