[package]
name = "retis"
version = "1.5.0"
license = "GPL-2.0-only"
description = "Tracing packets in the Linux networking stack, using eBPF and interfacing with control and data paths such as OvS or Netfilter"
repository = "https://github.com/retis-org/retis"
homepage = "https://github.com/retis-org/retis"
readme = "README.md"
keywords = ["tracing", "networking", "linux", "bpf", "ebpf"]
# Do not publish the tests and their data to save some space. Cargo files and
# readme are always included.
include = ["src/", "build.rs", "profiles/",  "LICENSE"]
edition = "2021"

[package.metadata.misc]
release_name = "panettone"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["python"]
python = ["retis-derive/python", "events/python-embed"]
test_bindgen_layout = []
test_cap_bpf = []
benchmark = []
debug = ["dep:rbpf"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
btf-rs = "1.1"
byteorder = "1.5"
caps = "0.5"
cargo-platform = "=0.1.8" # 0.1.9 requires rustc >= 1.78 but c8s only has 1.75.0
clap = { version = "4.0", features = ["derive", "string"] }
clap_complete = "4.4"
elf = "0.7"
events = {version = "1.4", path = "../retis-events", package="retis-events" }
flate2 = "1.0"
libbpf-rs = "0.24"
libbpf-sys = "1.5"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
memoffset = "0.9"
nix = { version = "0.29", features = ["feature", "mount", "time", "user"] }
once_cell = "1.15"
ovs-unixctl = { git = "https://github.com/amorenoz/ovs-unixctl.git", branch = "first" }
pager = "0.16"
pcap = "1.3"
pcap-file = "2.0"
plain = "0.2"
pnet_packet = "0.34"
rbpf = {version = "0.3", optional = true}
regex = "1.7"
retis-derive = {version = "1.4", path = "../retis-derive"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0"
serde_yaml = "0.9"
signal-hook = "0.3"
termcolor = "1.3"
time = { version = "0.3", features = ["formatting", "macros"] }
thiserror = "2.0"

[build-dependencies]
bindgen = "0.70"
libbpf-cargo = "0.24"
libbpf-sys = "1.5"
memmap2 = "0.9"

[dev-dependencies]
probe = "0.5"
serial_test = "3.1"
test-case = "3.2"
events = {version = "1.4", path = "../retis-events", package="retis-events", features = ["test-events"]}
