[package]
name = "retis"
description = "Tracing packets in the Linux networking stack, using eBPF and interfacing with control and data paths such as OvS or Netfilter"
readme = "README.md"
keywords = ["tracing", "networking", "linux", "bpf", "ebpf"]
# Do not publish the tests and their data to save some space. Cargo files and
# readme are always included.
include = ["src/", "build.rs", "profiles/",  "LICENSE"]
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[package.metadata.misc]
release_name = "olive oil"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["python"]
python = ["retis-derive/python", "events/python-shell"]
test_bindgen_layout = []
benchmark = []
debug = ["dep:rbpf"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
btf-rs = { git = "https://github.com/retis-org/btf-rs", branch = "main" }
byteorder = "1.5"
caps = "0.5"
cargo-platform = "0.3"
clap = { version = "4.0", features = ["derive", "string", "wrap_help"] }
clap_complete = "4.4"
elf = "0.8"
events = {version = "1.5", path = "../retis-events", package="retis-events" }
flate2 = "1.0"
libbpf-rs = "0.26"
libbpf-sys = "1.6"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
memoffset = "0.9"
nix = { version = "0.30", features = ["feature", "mount", "time", "user"] }
once_cell = "1.15"
ovs-unixctl = { version = "0.1.0" }
pager = "0.16"
pcap = "2.2"
pcap-file = { git = "https://github.com/courvoif/pcap-file.git", rev = "e60e2f9b614812360fdf6909b90a8b05283adb05" }
pest = "2.7"
pest_derive = "2.7"
plain = "0.2"
rbpf = {version = "0.3", optional = true}
regex = "1.7"
retis-derive = {version = "1.5", path = "../retis-derive"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0"
serde_yaml = "0.9"
signal-hook = "0.3"
termcolor = "1.3"
time = { version = "0.3", features = ["formatting", "macros"] }
thiserror = "2.0"
schemars = "0.9"

[build-dependencies]
bindgen = "0.72"
libbpf-cargo = "0.26"
memmap2 = "0.9"

[dev-dependencies]
probe = "0.5"
rbpf = "0.3"
serial_test = "3.1"
test-case = "3.2"
events = {version = "1.5", path = "../retis-events", package="retis-events", features = ["test-events"]}
